# goose

./: .gitignore  404.html  Cargo.toml  Justfile  README.md  configuration.html  contributing.html  download_cli.sh  download_tokenizer_files.py  index.html  installation.html  objects.inv  profiles.yaml  providers.yaml  pyproject.toml  quickstart.html  realtime-api.txt  sitemap.xml  test.txt
.github/workflows/: ci-desktop.yml  ci.yaml  deploy_docs.yaml  desktop-app-release.yaml  nodejs.yml
.github/workflows/scripts/: check_licenses.py
blog/: index.html
blog/2024/11/22/: screenshot-driven-development.html
blog/archive/: 2024.html
blog/category/: web-development.html
crates/goose/: .env.example  Cargo.toml
crates/goose-cli/: Cargo.toml
crates/goose-cli/src/: inputs.rs  main.rs  profile.rs  prompt.rs  session.rs
crates/goose-cli/src/agents/: agent.rs  mock_agent.rs  mod.rs
crates/goose-cli/src/commands/: configure.rs  expected_config.rs  mod.rs  run.rs  session.rs  version.rs
crates/goose-cli/src/config/: mod.rs  provider.rs  provider_conversion.rs
crates/goose-cli/src/inputs/: inputs.rs
crates/goose-cli/src/key_handler/: key_handler.rs  mod.rs
crates/goose-cli/src/profile/: mod.rs  profile.rs  profile_handler.rs  provider_helper.rs
crates/goose-cli/src/prompt/: cliclack.rs  mod.rs  prompt.rs  rustyline.rs  thinking.rs
crates/goose-cli/src/repl/: engine.rs
crates/goose-cli/src/session/: manager.rs  message_serialize.rs  mock_provider.rs  mod.rs  session.rs  session_file.rs
crates/goose-cli/src/systems/: goose_hints.rs  mod.rs  system_handler.rs
crates/goose-server/: Cargo.toml  lib.rs  test_session_api.sh
crates/goose-server/src/: configuration.rs  main.rs  state.rs
crates/goose-server/src/routes/: metadata.rs  mod.rs  reply.rs  reply.schema.json  session.rs
crates/goose/benches/: tokenization_benchmark.rs
crates/goose/examples/: .env.example  databricks_oauth.rs  image_tool.rs
crates/goose/src/: agent.rs  developer.rs  developer_system.rs  errors.rs  key_manager.rs  lib.rs  memory.rs  models.rs  process_store.rs  prompt.rs  prompt_template.rs  providers.rs  systems.rs  token_counter.rs  tool.rs
crates/goose/src/models/: content.rs  message.rs  role.rs  tool.rs
crates/goose/src/prompts/: status.md  system.md
crates/goose/src/providers/: anthropic.rs  base.rs  configs.rs  databricks.rs  databricks_oauth.rs  factory.rs  mock.rs  oauth.rs  ollama.rs  openai.rs  types.rs  utils.rs
crates/goose/src/providers/configs/: databricks.rs
crates/goose/src/providers/types/: content.rs  message.rs  objectid.rs  tool.rs
crates/goose/src/systems/: error.rs  goose_hints.rs  mod.rs  resource.rs  system.rs
crates/goose/tests/: providers.rs  systems.rs
crates/stub-system/: Cargo.toml
crates/stub-system/src/: main.rs
docs/: configuration.md  errors.md  installation.md  systems.md
docs/blog/posts/: 2024-11-22-screenshot-driven-development.md
docs/plugins/: providers.md
guidance/: applications.html  getting-started.html  goose-in-action.html  managing-goose-sessions.html  tips.html  using-goosehints.html
overrides/: social_meta_inject.html
plugins/: available-toolkits.html  cli.html  creating-a-new-toolkit.html  plugins.html  providers.html  using-toolkits.html
reference/: index.html
reference/goose/: build.html  index.html  notifier.html  profile.html  view.html
reference/goose/cli/: config.html  index.html  main.html  session.html
reference/goose/cli/prompt/: completer.html  create.html  goose_prompt_session.html  index.html  lexer.html  prompt_validator.html  user_input.html
reference/goose/command/: base.html  file.html  index.html
reference/goose/toolkit/: base.html  developer.html  github.html  index.html  lint.html  screen.html  utils.html
reference/goose/toolkit/repo_context/: index.html  repo_context.html  utils.html
reference/goose/toolkit/summarization/: index.html  summarize_file.html  summarize_project.html  summarize_repo.html  utils.html
reference/goose/utils/: ask.html  file_utils.html  index.html  session_file.html
reference/goose/utils/shell/: is_dangerous_command.html
search/: search_index.json
src/: lib.rs  main.rs  providers.rs
src/goose/: build.py  profile.py
src/goose/cli/: main.py  session.py
src/goose/synopsis/: bash.py  developer.md  moderator.py  plan.md  process_manager.py  synopsis.md  text_editor.py  toolkit.py
src/goose/toolkit/: base.py
src/goose/utils/: _cost_calculator.py  _create_exchange.py  confirm_execute.py  file_changes.py  time_utils.py  tracing.py
src/providers/: base.rs  configs.rs  openai.rs  types.rs  utils.rs
src/providers/configs/: base.rs  databricks.rs  openai.rs
src/providers/types/: content.rs  message.rs  objectid.rs  tool.rs
tests/: test_profile.py
tests/cli/: test_main.py  test_session.py
tests/synopsis/: test_toolkit.py
tests/utils/: test_cost_calculator.py
ui/desktop/: .env  .gitignore  .goosehints  README.md  bundle.py  forge.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  test.json  tsconfig.json
ui/desktop/images/: icon.icns
ui/desktop/src/: App.tsx  Chat.tsx  ChatWindow.tsx  Home.tsx  LauncherWindow.tsx  Splash.tsx  SpotlightInput.tsx  WingToWingWindow.tsx  agent.ts  config.ts  custom-chat-api.ts  custom-chat-processor.ts  goosed.ts  hooks.ts  index.css  main.ts  notificationPrompts.ts  preload.js  renderer.tsx  sessions.ts  utils.ts
ui/desktop/src/ai-sdk-fork/: call-custom-chat-api.ts  process-custom-chat-response.ts  useChat.ts
ui/desktop/src/components/: ApiKeyWarning.tsx  BottomMenu.tsx  ChatContent.tsx  ErrorScreen.tsx  GooseMessage.tsx  GooseResponseForm.tsx  GooseSplashLogo.tsx  Input.tsx  LinkPreview.tsx  LoadingGoose.tsx  LoadingPlaceholder.tsx  MarkdownContent.tsx  MoreMenu.tsx  SessionManager.tsx  SessionPIlls.tsx  SessionPills.tsx  Splash.tsx  SplashDirs.tsx  SplashPills.tsx  Tabs.tsx  ToolCall.tsx  ToolCallArguments.tsx  ToolInvocation.tsx  ToolInvocations.tsx  ToolResult.tsx  UserInteractionForm copy.tsx  UserInteractionForm.tsx  UserMessage.tsx  WelcomeScreen.tsx  (+1 more)
(+30 files in other folders)
