[package]
name = "goose-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "goose"
path = "src/main.rs"

[dependencies]
goose = { path = "../goose" }
clap = { version = "4.4", features = ["derive"] }
cliclack = "0.3.5"
console = "0.15.8"
bat = "0.24.0"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.11.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rustyline = { version = "14.0", features = ["with-file-history"] }
