[package]
name = "goose-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "goose"
path = "src/main.rs"

[dependencies]
goose = { path = "../goose" }
clap = { version = "4.4", features = ["derive"] }
cliclack = "0.3.5"
console = "0.15.8"
ctrlc = "3.4.2"
bat = "0.24.0"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.11.1"
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }  # For serialization
serde_yaml = "0.9"
dirs = "4.0"
strum = "0.26"
strum_macros = "0.26"
reqwest = "0.11.27"
rand = "0.8.5"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"

