[package]
name = "goose-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
goose = { path = "../goose" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = "0.1"
anyhow = "1.0"
bytes = "1.5"
http-body-util = "0.1"
http = "1.0"
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.4", features = ["util"] }
tower-service = "0.3"

[[bin]]
name = "goosed"
path = "src/main.rs"
