[package]
name = "goose-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
goose = { path = "../goose" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = "0.1"
anyhow = "1.0"
bytes = "1.5"
http-body-util = "0.1"
http = "1.0"
config = { version = "0.14.1", features = ["toml"] }
thiserror = "1.0"

[[bin]]
name = "goosed"
path = "src/main.rs"

[dev-dependencies]
serial_test = "3.2.0"
tower = "0.5"
async-trait = "0.1"
