[package]
name = "goose"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.11.1"
chrono = { version = "0.4.38", features = ["serde"] }
sha2 = "0.10.8"
nanoid = "0.4.0"
webbrowser = "1.0.2"
warp = "0.3.7"
base64 = "0.22.1"
serde_urlencoded = "0.7.1"
url = "2.5.3"

[dev-dependencies]
wiremock = "0.6.0"
