[package]
name = "goose"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.11.1"
async-trait = "0.1"
async-stream = "0.3"
strum = "0.26"
strum_macros = "0.26"
tera = "1.20.0"
tokenizers = "0.20.3"
include_dir = "0.7.4"
chrono = "0.4.38"
indoc = "2.0.5"

[dev-dependencies]
wiremock = "0.6.0"
mockito = "1.2"
tempfile = "3.8"
dotenv = "0.15"
