[package]
name = "goose"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
dirs = "5.0.1"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.11.1"
async-trait = "0.1"
async-stream = "0.3"
strum = "0.26"
strum_macros = "0.26"
tera = "1.20.0"
tokenizers = "0.20.3"
include_dir = "0.7.4"
chrono = { version = "0.4.38", features = ["serde"] }
indoc = "2.0.5"
nanoid = "0.4"
sha2 = "0.10"
base64 = "0.21"
url = "2.5"
urlencoding = "2.1.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
webbrowser = "0.8"
dotenv = "0.15"
xcap = "0.0.14"
libc = "=0.2.167"
lazy_static = "1.5"
kill_tree = "0.2.4"

keyring = { version = "3.6.1", features = ["apple-native", "windows-native", "sync-secret-service"] }
shellexpand = "3.1.0"

[dev-dependencies]
sysinfo = "0.32.1"
wiremock = "0.6.0"
mockito = "1.2"
tempfile = "3.8"
mockall = "0.11"
criterion = "0.5"
tokio-test = "0.4"

[[example]]
name = "databricks_oauth"
path = "examples/databricks_oauth.rs"

[[bench]]
name = "tokenization_benchmark"
harness = false
